[project]
name = "pig-plugin-steam"
version = "2.0.0"
description = "Steam 状态查询与监控插件"
authors = [{name = "pwaurora"}]
requires-python = ">=3.10"
dependencies = [
    "pigsender-plugin-sdk",
    "aiohttp",
    "Pillow",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"
